--- a/microscroll/client/netlify.toml
+++ b/microscroll/client/netlify.toml
@@ -1,5 +1,6 @@
 [build]
-  base = "client"
+  # Base directory is set in Netlify UI to: microscroll/client
+  # Paths below are relative to that base
   command = "npm run build"
   publish = "dist"
 
@@ -9,7 +10,7 @@
 # Redirect API calls to backend
 [[redirects]]
   from = "/api/*"
-  to = "https://microscroll-api.onrender.com/api/:splat"
+  to = "https://quickrevise.onrender.com/api/:splat"
   status = 200
   force = true
 
